--- a/chatroom/index.html
+++ b/chatroom/index.html
@@ -16,6 +16,7 @@
       <h6 class="card-subtitle mb-2 text-muted">{{ message.nickname }}</h6>
       <!-- content -->
       <p class="card-text">{{ message.text }}</p>
+      <a @click.prevent="deleteMessage(message)" href="#" class="card-link">delete</a>
     </div>
   </div>
 
@@ -49,7 +50,8 @@
   firebase.initializeApp(config);
 
   const database = firebase.database();
-
+  const messagesRef = database.ref('messages');
+ 
 
   new Vue({
     el: "#chat",
@@ -60,13 +62,21 @@
     },
 
     created(){
-      database.ref('messages').on('child_added', snapshot => this.messages.push(snapshot.val()));
+      messagesRef.on('child_added', snapshot => this.messages.push({...snapshot.val(), id: snapshot.key}));
+      messagesRef.on('child_removed', snapshot => {
+        const deletedMessage = this.messages.find( message => message.id === snapshot.key);
+        const index = this.messages.indexOf(deletedMessage);
+        this.messages.splice(index,1);
+      });
     },
     methods: {
       storeMessage () {
-        this.messages.push({text: this.messageText, nickname: this.nickname})
+        messagesRef.push({text: this.messageText, nickname: this.nickname});
         this.messageText = ''
-      }
+      },
+      deleteMessage(message){
+        messagesRef.child(message.id).remove();
+      },
     }
   })
 </script>
