--- a/chatroom/index.html
+++ b/chatroom/index.html
@@ -4,7 +4,10 @@
   <title>Vue School Chat Room</title>
   <script src="https://unpkg.com/vue"></script>
   <script src="https://www.gstatic.com/firebasejs/5.7.1/firebase.js"></script>
+  <script src="https://unpkg.com/native-toast@2.0.0/dist/native-toast.min.js"></script>
+  
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
+  <link rel="stylesheet" href="https://unpkg.com/native-toast@2.0.0/dist/native-toast.css">
 </head>
 <body>
 <div id="chat" class="container">
@@ -15,14 +18,24 @@
       <!-- nickname -->
       <h6 class="card-subtitle mb-2 text-muted">{{ message.nickname }}</h6>
       <!-- content -->
-      <p class="card-text">{{ message.text }}</p>
-      <a @click.prevent="deleteMessage(message)" href="#" class="card-link">delete</a>
+      <p v-if="message !== editingMessage" class="card-text">{{ message.text }}</p>
+      <textarea v-else v-model="messageText" class="form-control"></textarea>
+      <!-- actions -->
+      <div v-if="message !== editingMessage">
+        <a @click.prevent="deleteMessage(message)" href="#" class="card-link">delete</a>
+        <a @click.prevent="editMessage(message)" href="#" class="card-link">edit</a>
+      </div>
+      <div v-else> 
+        <a @click.prevent="cancelEditing" href="#" class="card-link">cancel</a>
+        <a @click.prevent="updateMessage" href="#" class="card-link">update</a>
+      </div>
+
     </div>
   </div>
 
   <hr>
   <!-- New Message -->
-  <form @submit.prevent="storeMessage">
+  <form v-if="!editingMessage" @submit.prevent="storeMessage">
     <div class="form-group">
       <label>Message:</label>
       <textarea v-model="messageText" class="form-control"></textarea>
@@ -58,15 +71,40 @@
     data: {
       messages: [],
       messageText: '',
-      nickname: 'hootlex'
+      nickname: 'hootlex',
+      editingMessage: null,
     },
 
     created(){
-      messagesRef.on('child_added', snapshot => this.messages.push({...snapshot.val(), id: snapshot.key}));
+      messagesRef.on('child_added', snapshot => {
+        this.messages.push({...snapshot.val(), id: snapshot.key});
+        if(snapshot.val().nickname !== this.nickname){
+            nativeToast({
+            message: `New Message by ${snapshot.val().nickname}`,
+            type: 'success'
+          })
+        }    
+      });
       messagesRef.on('child_removed', snapshot => {
         const deletedMessage = this.messages.find( message => message.id === snapshot.key);
         const index = this.messages.indexOf(deletedMessage);
         this.messages.splice(index,1);
+        if(snapshot.val().nickname !== this.nickname){
+          nativeToast({
+            message: `Message Deleted by ${snapshot.val().nickname}`,
+            type: 'warning'
+          })
+        }  
+      });
+      messagesRef.on('child_changed', snapshot => {
+        const updatedMessage = this.messages.find( message => message.id === snapshot.key);
+        updatedMessage.text = snapshot.val().text;
+        if(snapshot.val().nickname !== this.nickname){
+            nativeToast({
+            message: `New Edited by ${snapshot.val().nickname}`,
+            type: 'info'
+          })
+        }  
       });
     },
     methods: {
@@ -77,6 +115,18 @@
       deleteMessage(message){
         messagesRef.child(message.id).remove();
       },
+      editMessage(message){
+        this.editingMessage = message;
+        this.messageText = message.text;
+      },
+      cancelEditing(){
+        this.editingMessage = null;
+        this.messageText = ''
+      },
+      updateMessage(){
+        messagesRef.child(this.editingMessage.id).update({text: this.messageText});
+        this.cancelEditing();
+      }
     }
   })
 </script>
