--- a/VueSchool/User Login and out - Vue.js with Firebase Authentication/index.html
+++ b/VueSchool/User Login and out - Vue.js with Firebase Authentication/index.html
@@ -1,134 +1,64 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Vue School Chat Room</title>
+  <title>Vue School Firebase Authentication</title>
   <script src="https://unpkg.com/vue"></script>
-  <script src="https://www.gstatic.com/firebasejs/5.7.1/firebase.js"></script>
-  <script src="https://unpkg.com/native-toast@2.0.0/dist/native-toast.min.js"></script>
-  
+  <script src="https://www.gstatic.com/firebasejs/5.7.2/firebase.js"></script>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
-  <link rel="stylesheet" href="https://unpkg.com/native-toast@2.0.0/dist/native-toast.css">
 </head>
 <body>
-<div id="chat" class="container">
-  <h1>Vue School Chat Room</h1>
-  <!-- Messages -->
-  <div v-for="message in messages" class="card">
-    <div class="card-body">
-      <!-- nickname -->
-      <h6 class="card-subtitle mb-2 text-muted">{{ message.nickname }}</h6>
-      <!-- content -->
-      <p v-if="message !== editingMessage" class="card-text">{{ message.text }}</p>
-      <textarea v-else v-model="messageText" class="form-control"></textarea>
-      <!-- actions -->
-      <div v-if="message !== editingMessage">
-        <a @click.prevent="deleteMessage(message)" href="#" class="card-link">delete</a>
-        <a @click.prevent="editMessage(message)" href="#" class="card-link">edit</a>
-      </div>
-      <div v-else> 
-        <a @click.prevent="cancelEditing" href="#" class="card-link">cancel</a>
-        <a @click.prevent="updateMessage" href="#" class="card-link">update</a>
-      </div>
-
-    </div>
+<div id="app" class="container">
+  <h1>Vue School Firebase Authentication</h1>
+  <div v-if="authUser">
+    <h2>Signed in as {{authUser.email}}
+    </h2>
   </div>
-
-  <hr>
-  <!-- New Message -->
-  <form v-if="!editingMessage" @submit.prevent="storeMessage">
-    <div class="form-group">
-      <label>Message:</label>
-      <textarea v-model="messageText" class="form-control"></textarea>
-    </div>
-    <div class="form-group">
-      <label>Nickname:</label>
-      <input v-model="nickname" class="form-control"/>
-    </div>
-    <button class="btn btn-primary">Send</button>
-  </form>
+  <div v-else >
+    <form @submit.prevent="register">
+      <input type="email" v-model="email" placeholder="Type your email">
+      <input type="password" v-model="password" placeholder="Pick your password">
+      <button>Submit</button>
+    </form>
+  </div>
+  
 </div>
 
-
-<script type="text/javascript">
+<script>
   // Initialize Firebase
   var config = {
-    apiKey: "AIzaSyB2dajM7iyJpPuVt_7nQSaYa0JD2A6Q1tg",
-    authDomain: "vue-school-chat-room-95de2.firebaseapp.com",
-    databaseURL: "https://vue-school-chat-room-95de2.firebaseio.com",
-    projectId: "vue-school-chat-room-95de2",
-    storageBucket: "vue-school-chat-room-95de2.appspot.com",
-    messagingSenderId: "786639549512"
+    apiKey: "AIzaSyAjgtHlUfXUPeIV5d2ra5nNbBliTd_Ngck",
+    authDomain: "vue-school-auth-f2ce3.firebaseapp.com",
+    databaseURL: "https://vue-school-auth-f2ce3.firebaseio.com",
+    projectId: "vue-school-auth-f2ce3",
+    storageBucket: "vue-school-auth-f2ce3.appspot.com",
+    messagingSenderId: "105642103293"
   };
-
   firebase.initializeApp(config);
+
 
   const database = firebase.database();
   const messagesRef = database.ref('messages');
  
 
   new Vue({
-    el: "#chat",
+    el: "#app",
     data: {
-      messages: [],
-      messageText: '',
-      nickname: 'hootlex',
-      editingMessage: null,
+       email:'',
+       password:'',
+       authUser:null,
     },
 
     created(){
-      messagesRef.on('child_added', snapshot => {
-        this.messages.push({...snapshot.val(), id: snapshot.key});
-        if(snapshot.val().nickname !== this.nickname){
-            nativeToast({
-            message: `New Message by ${snapshot.val().nickname}`,
-            type: 'success'
-          })
-        }    
-      });
-      messagesRef.on('child_removed', snapshot => {
-        const deletedMessage = this.messages.find( message => message.id === snapshot.key);
-        const index = this.messages.indexOf(deletedMessage);
-        this.messages.splice(index,1);
-        if(snapshot.val().nickname !== this.nickname){
-          nativeToast({
-            message: `Message Deleted by ${snapshot.val().nickname}`,
-            type: 'warning'
-          })
-        }  
-      });
-      messagesRef.on('child_changed', snapshot => {
-        const updatedMessage = this.messages.find( message => message.id === snapshot.key);
-        updatedMessage.text = snapshot.val().text;
-        if(snapshot.val().nickname !== this.nickname){
-            nativeToast({
-            message: `New Edited by ${snapshot.val().nickname}`,
-            type: 'info'
-          })
-        }  
-      });
+     
     },
     methods: {
-      storeMessage () {
-        messagesRef.push({text: this.messageText, nickname: this.nickname});
-        this.messageText = ''
-      },
-      deleteMessage(message){
-        messagesRef.child(message.id).remove();
-      },
-      editMessage(message){
-        this.editingMessage = message;
-        this.messageText = message.text;
-      },
-      cancelEditing(){
-        this.editingMessage = null;
-        this.messageText = ''
-      },
-      updateMessage(){
-        messagesRef.child(this.editingMessage.id).update({text: this.messageText});
-        this.cancelEditing();
+      register(){
+        firebase.auth().createUserWithEmailAndPassword(this.email,this.password);
       }
     }
   })
+
+  firebase.auth().onAuthStateChanged(user => { this.authUser = user })
 </script>
 </body>
 </html>
